add YAML front matter parsing

--- a/src/_posts.html
+++ b/src/_posts.html
@@ -8,6 +8,8 @@
     <br>
     date: {{ date_published | datetime_format }}
     <br>
+    tags: {{ tags | join(", ") }}
+    <br>
     {{ post_content_html }}
   </body>
 </html>
