parse example blog config file, use site title

--- a/src/_templates/index.html
+++ b/src/_templates/index.html
@@ -1,5 +1,9 @@
 {% extends "_templates/wrapper.html" %}
 {% block wrapped_content %}
+  {% if site_title %}
+    <h1 class="title">{{site_title}}</h1>
+  {% endif %}
+
   {{ post_content_html }}
 
   {% for page in pages | sort(attribute="date", reverse=true) %}
