interpolate baseurl in links

--- a/src/_templates/tags.html
+++ b/src/_templates/tags.html
@@ -4,7 +4,7 @@
   <ul>
     {% for page in tagged_pages | sort(attribute="date", reverse=true) %}
     <li>
-      <a href="/{{page.url}}">{{page.title}}</a> 
+      <a href="{{page.url}}">{{page.title}}</a> 
       <span class="date">- {{ page.date | strftime }}</span>
     </li>
     {% endfor %}
