--- a/src/_templates/index.html
+++ b/src/_templates/index.html
@@ -1,7 +1,7 @@
 {% extends "_templates/wrapper.html" %}
 {% block wrapped_content %}
-  {% if site_title %}
-    <h1 class="title">{{site_title}}</h1>
+  {% if siteConfig.title %}
+    <h1 class="title">{{siteConfig.title}}</h1>
   {% endif %}
 
   {{ post_content_html }}
