--- a/src/_templates/wrapper.html
+++ b/src/_templates/wrapper.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>My Blog</title>
-    <link rel="stylesheet" href="/public/codehilite.css" />
-    <link rel="stylesheet" href="/public/themes/longform.css" />
+    <link rel="stylesheet" href="/{{siteConfig.baseurl}}public/codehilite.css" />
+    <link rel="stylesheet" href="/{{siteConfig.baseurl}}public/themes/longform.css" />
   </head>
   <body>
     {% block wrapped_content %}{% endblock %}
