fix relative tag urls

--- a/src/_templates/posts.html
+++ b/src/_templates/posts.html
@@ -5,7 +5,7 @@
   {% if tags %}
   <div class="tags">tags: 
     {% for tag in tags %}
-      <a class="tag" href="/tag/{{tag}}">{{tag}}</a>
+      <a class="tag" href="../tag/{{tag}}">{{tag}}</a>
     {% endfor %}
   </div>
   {% endif %}
