fix home link on base template

--- a/src/_templates/base.html
+++ b/src/_templates/base.html
@@ -1,5 +1,5 @@
 {% extends "_templates/wrapper.html" %}
 {% block wrapped_content %}
-  <a href="/"><< home</a>
+  <a href="/{{siteConfig.baseurl}}"><< home</a>
   {% block content %}{% endblock %}
 {% endblock %}
